# tap-sherpaan

./: README.md  meltano.yml  pyproject.toml
tap_serpaan/: __init__.py  client.py  pagination.py  streams.py  tap.py
tap_sherpaan/: __init__.py  client.py  pagination.py  streams.py  tap.py
