[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

[project]
name = "tap-sherpaan"
version = "0.1.0"
description = "Singer tap for Sherpa, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Eduardo Sequeira", email = "eduardosequeira@optiply.nl" }]
keywords = [ "ELT", "Sherpa" ]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "singer-sdk>=0.33.0",
    "zeep>=4.2.1",
    "tenacity>=9.1.2",
    "click>=8.1.0",
]

[project.scripts]
tap-sherpaan = "tap_sherpaan.tap:TapSherpaan.cli"

[tool.hatch.build.targets.wheel]
packages = ["tap_sherpaan"]
